samples/_failures_safe/1761188635_d9a91b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24ca75a6.c: In function ‘main’:
./samples/SAFE/__tmp_24ca75a6.c:145:24: error: missing terminating " character
  145 |                 printf("Failed
      |                        ^~~~~~~
./samples/SAFE/__tmp_24ca75a6.c:145:17: error: expected expression at end of input
  145 |                 printf("Failed
      |                 ^~~~~~
./samples/SAFE/__tmp_24ca75a6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24ca75a6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24ca75a6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24ca75a6.c:145:17: error: expected declaration or statement at end of input
